--- a/web/index.html
+++ b/web/index.html
@@ -66,13 +66,13 @@
   // Your web app's Firebase configuration
   // For Firebase JS SDK v7.20.0 and later, measurementId is optional
   const firebaseConfig = {
-    apiKey: "Your-api-key-here",
-    authDomain: "Your-auth-domain-here",
-    projectId: "Your-project-id-here",
-    storageBucket: "Your-storage-bucket-here",
-    messagingSenderId: "Your-messaging-sender-id-here",
-    appId: "Your-app-id-here",
-    measurementId: "Your-measurement-id-here"
+    apiKey: "AIzaSyA4cUpI_1Ffu_Gll9g-TKUpBqWuF7gujDA",
+    authDomain: "wah-health-and-care.firebaseapp.com",
+    projectId: "wah-health-and-care",
+    storageBucket: "wah-health-and-care.appspot.com",
+    messagingSenderId: "917340158873",
+    appId: "1:917340158873:web:69873976727017c113b108",
+    measurementId: "G-SYXZV948N1"
   };
 
   // Initialize Firebase
